--- a/loading_data.ipynb
+++ b/loading_data.ipynb
@@ -31,8 +31,8 @@
    "source": [
     "# Section 1: Data pre-processing\n",
     "---\n",
-    "1.1 [Loading the data](#1.1-Loading-the-data)\n",
-    "1.2 [Dataset properties](#1.2-Dataset-properties)"
+    "1.1 [Loading the data](#loading) </br>\n",
+    "1.2 [Dataset properties](#properties) </br>"
    ],
    "metadata": {
     "collapsed": false
@@ -42,7 +42,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### 1.1 Loading the data"
+    "### 1.1 Loading the data <a name=\"loading\"></a>"
    ],
    "metadata": {
     "collapsed": false
@@ -112,7 +112,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### 1.2 Dataset properties"
+    "### 1.2 Dataset properties <a name=\"properties\"></a>"
    ],
    "metadata": {
     "collapsed": false
@@ -192,16 +192,6 @@
     }
    },
    "id": "39ae5c73f7a1d7c7"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "48d66ccd3ac31667"
   }
  ],
  "metadata": {
