--- a/loading_data.ipynb
+++ b/loading_data.ipynb
@@ -12,13 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-09T15:27:41.995572896Z",
-     "start_time": "2023-11-09T15:27:41.704243686Z"
+     "end_time": "2023-11-09T17:13:51.742490522Z",
+     "start_time": "2023-11-09T17:13:51.694986451Z"
     }
    },
    "outputs": [],
@@ -31,8 +31,9 @@
    "source": [
     "# Section 1: Data pre-processing\n",
     "---\n",
-    "1.1 [Loading the data](#loading) </br>\n",
-    "1.2 [Dataset properties](#properties) </br>"
+    "1.1 [Loading the data](#loading)\n",
+    "\n",
+    "1.2 [Dataset properties](#properties)"
    ],
    "metadata": {
     "collapsed": false
@@ -42,7 +43,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### 1.1 Loading the data <a name=\"loading\"></a>"
+    "### Loading the data <a id=\"loading\"></a>"
    ],
    "metadata": {
     "collapsed": false
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 40,
    "outputs": [],
    "source": [
     "# main data path and relative paths to the datasets\n",
@@ -65,15 +66,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-09T17:02:03.330073392Z",
-     "start_time": "2023-11-09T17:02:03.285676280Z"
+     "end_time": "2023-11-09T17:13:52.262782102Z",
+     "start_time": "2023-11-09T17:13:52.251428257Z"
     }
    },
    "id": "3ff3c03426fdbad0"
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 41,
    "outputs": [],
    "source": [
     "# columns used when loading a specific dataset (for the attribute \"names\" in pandas.read_csv)\n",
@@ -85,15 +86,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-09T17:02:03.630265155Z",
-     "start_time": "2023-11-09T17:02:03.619907521Z"
+     "end_time": "2023-11-09T17:13:52.484652429Z",
+     "start_time": "2023-11-09T17:13:52.467946321Z"
     }
    },
    "id": "70a83259d9c6ec7d"
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 42,
    "outputs": [],
    "source": [
     "# load the datasets as pandas dataframes\n",
@@ -103,8 +104,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-09T17:02:05.800257733Z",
-     "start_time": "2023-11-09T17:02:04.173550788Z"
+     "end_time": "2023-11-09T17:13:54.030463956Z",
+     "start_time": "2023-11-09T17:13:52.693506226Z"
     }
    },
    "id": "ea1c938277b3886c"
@@ -112,7 +113,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### 1.2 Dataset properties <a name=\"properties\"></a>"
+    "### 1.2 Dataset properties <a id=\"properties\"></a>"
    ],
    "metadata": {
     "collapsed": false
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "outputs": [
     {
      "name": "stdout",
@@ -133,10 +134,10 @@
     },
     {
      "data": {
-      "text/plain": "       wikipedia_id freebase_movie_id    name release_date      revenue  \\\n51124         44302          /m/0c296  Amélie   2001-04-25  173921954.0   \n\n       runtime                                          languages  \\\n51124    120.0  {\"/m/064_8sq\": \"French Language\", \"/m/06b_j\": ...   \n\n                                            countries  \\\n51124  {\"/m/0f8l9c\": \"France\", \"/m/0345h\": \"Germany\"}   \n\n                                                  genres  \n51124  {\"/m/06cvj\": \"Romantic comedy\", \"/m/03q4nz\": \"...  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>wikipedia_id</th>\n      <th>freebase_movie_id</th>\n      <th>name</th>\n      <th>release_date</th>\n      <th>revenue</th>\n      <th>runtime</th>\n      <th>languages</th>\n      <th>countries</th>\n      <th>genres</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>51124</th>\n      <td>44302</td>\n      <td>/m/0c296</td>\n      <td>Amélie</td>\n      <td>2001-04-25</td>\n      <td>173921954.0</td>\n      <td>120.0</td>\n      <td>{\"/m/064_8sq\": \"French Language\", \"/m/06b_j\": ...</td>\n      <td>{\"/m/0f8l9c\": \"France\", \"/m/0345h\": \"Germany\"}</td>\n      <td>{\"/m/06cvj\": \"Romantic comedy\", \"/m/03q4nz\": \"...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "      wikipedia_id freebase_movie_id            name release_date  revenue  \\\n3298      27329170        /m/0by00vv  Tōki Rakujitsu   1992-07-04      NaN   \n\n      runtime languages              countries  \\\n3298    119.0        {}  {\"/m/03_3d\": \"Japan\"}   \n\n                                 genres  \n3298  {\"/m/0gw5n2f\": \"Japanese Movies\"}  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>wikipedia_id</th>\n      <th>freebase_movie_id</th>\n      <th>name</th>\n      <th>release_date</th>\n      <th>revenue</th>\n      <th>runtime</th>\n      <th>languages</th>\n      <th>countries</th>\n      <th>genres</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>3298</th>\n      <td>27329170</td>\n      <td>/m/0by00vv</td>\n      <td>Tōki Rakujitsu</td>\n      <td>1992-07-04</td>\n      <td>NaN</td>\n      <td>119.0</td>\n      <td>{}</td>\n      <td>{\"/m/03_3d\": \"Japan\"}</td>\n      <td>{\"/m/0gw5n2f\": \"Japanese Movies\"}</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 38,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,15 +151,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-09T17:02:35.585301834Z",
-     "start_time": "2023-11-09T17:02:35.565773596Z"
+     "end_time": "2023-11-09T17:13:54.464930043Z",
+     "start_time": "2023-11-09T17:13:54.449104006Z"
     }
    },
    "id": "f4d43a49882d8a85"
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 44,
    "outputs": [
     {
      "name": "stdout",
@@ -170,10 +171,10 @@
     },
     {
      "data": {
-      "text/plain": "        wikipedia_id freebase_movie_id release_date character_name  \\\n407080        160047        /m/025rxjq   2000-03-17         Anaugh   \n\n          birthday gender  height ethnicity          name  age_at_release  \\\n407080  1975-01-29      F     1.6  /m/041rx  Sara Gilbert            25.0   \n\n       freebase_map freebase_char_id freebase_actor_id  \n407080   /m/03l601j       /m/09j601l         /m/026l1g  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>wikipedia_id</th>\n      <th>freebase_movie_id</th>\n      <th>release_date</th>\n      <th>character_name</th>\n      <th>birthday</th>\n      <th>gender</th>\n      <th>height</th>\n      <th>ethnicity</th>\n      <th>name</th>\n      <th>age_at_release</th>\n      <th>freebase_map</th>\n      <th>freebase_char_id</th>\n      <th>freebase_actor_id</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>407080</th>\n      <td>160047</td>\n      <td>/m/025rxjq</td>\n      <td>2000-03-17</td>\n      <td>Anaugh</td>\n      <td>1975-01-29</td>\n      <td>F</td>\n      <td>1.6</td>\n      <td>/m/041rx</td>\n      <td>Sara Gilbert</td>\n      <td>25.0</td>\n      <td>/m/03l601j</td>\n      <td>/m/09j601l</td>\n      <td>/m/026l1g</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "       wikipedia_id freebase_movie_id release_date character_name birthday  \\\n53384      20935471        /m/05b2d7t   1988-10-27        Natalie      NaN   \n\n      gender  height ethnicity             name  age_at_release freebase_map  \\\n53384      F     NaN       NaN  Saskia Schlicht             NaN   /m/0n50p17   \n\n      freebase_char_id freebase_actor_id  \n53384       /m/0n537wh        /m/0n50p1b  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>wikipedia_id</th>\n      <th>freebase_movie_id</th>\n      <th>release_date</th>\n      <th>character_name</th>\n      <th>birthday</th>\n      <th>gender</th>\n      <th>height</th>\n      <th>ethnicity</th>\n      <th>name</th>\n      <th>age_at_release</th>\n      <th>freebase_map</th>\n      <th>freebase_char_id</th>\n      <th>freebase_actor_id</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>53384</th>\n      <td>20935471</td>\n      <td>/m/05b2d7t</td>\n      <td>1988-10-27</td>\n      <td>Natalie</td>\n      <td>NaN</td>\n      <td>F</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Saskia Schlicht</td>\n      <td>NaN</td>\n      <td>/m/0n50p17</td>\n      <td>/m/0n537wh</td>\n      <td>/m/0n50p1b</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 37,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,11 +188,25 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-09T17:02:31.453598913Z",
-     "start_time": "2023-11-09T17:02:31.422187723Z"
+     "end_time": "2023-11-09T17:13:54.955102670Z",
+     "start_time": "2023-11-09T17:13:54.909244376Z"
     }
    },
    "id": "39ae5c73f7a1d7c7"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-09T17:13:55.389646604Z",
+     "start_time": "2023-11-09T17:13:55.348297803Z"
+    }
+   },
+   "id": "341643cc5e0edfa2"
   }
  ],
  "metadata": {
