--- a/loading_data.ipynb
+++ b/loading_data.ipynb
@@ -12,13 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 49,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-09T17:13:51.742490522Z",
-     "start_time": "2023-11-09T17:13:51.694986451Z"
+     "end_time": "2023-11-09T17:17:23.041716299Z",
+     "start_time": "2023-11-09T17:17:23.030002308Z"
     }
    },
    "outputs": [],
@@ -31,9 +31,8 @@
    "source": [
     "# Section 1: Data pre-processing\n",
     "---\n",
-    "1.1 [Loading the data](#loading)\n",
-    "\n",
-    "1.2 [Dataset properties](#properties)"
+    "[Loading the data](#loading-the-data) \\\n",
+    "[Dataset properties](#data-properties)"
    ],
    "metadata": {
     "collapsed": false
@@ -43,7 +42,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Loading the data <a id=\"loading\"></a>"
+    "### Loading the data"
    ],
    "metadata": {
     "collapsed": false
@@ -52,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 50,
    "outputs": [],
    "source": [
     "# main data path and relative paths to the datasets\n",
@@ -66,15 +65,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-09T17:13:52.262782102Z",
-     "start_time": "2023-11-09T17:13:52.251428257Z"
+     "end_time": "2023-11-09T17:17:23.672334040Z",
+     "start_time": "2023-11-09T17:17:23.663270593Z"
     }
    },
    "id": "3ff3c03426fdbad0"
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 51,
    "outputs": [],
    "source": [
     "# columns used when loading a specific dataset (for the attribute \"names\" in pandas.read_csv)\n",
@@ -86,15 +85,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-09T17:13:52.484652429Z",
-     "start_time": "2023-11-09T17:13:52.467946321Z"
+     "end_time": "2023-11-09T17:17:23.921498792Z",
+     "start_time": "2023-11-09T17:17:23.906006439Z"
     }
    },
    "id": "70a83259d9c6ec7d"
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 52,
    "outputs": [],
    "source": [
     "# load the datasets as pandas dataframes\n",
@@ -104,8 +103,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-09T17:13:54.030463956Z",
-     "start_time": "2023-11-09T17:13:52.693506226Z"
+     "end_time": "2023-11-09T17:17:25.729085452Z",
+     "start_time": "2023-11-09T17:17:24.132294083Z"
     }
    },
    "id": "ea1c938277b3886c"
@@ -113,7 +112,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### 1.2 Dataset properties <a id=\"properties\"></a>"
+    "### Dataset properties"
    ],
    "metadata": {
     "collapsed": false
@@ -122,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 53,
    "outputs": [
     {
      "name": "stdout",
@@ -134,10 +133,10 @@
     },
     {
      "data": {
-      "text/plain": "      wikipedia_id freebase_movie_id            name release_date  revenue  \\\n3298      27329170        /m/0by00vv  Tōki Rakujitsu   1992-07-04      NaN   \n\n      runtime languages              countries  \\\n3298    119.0        {}  {\"/m/03_3d\": \"Japan\"}   \n\n                                 genres  \n3298  {\"/m/0gw5n2f\": \"Japanese Movies\"}  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>wikipedia_id</th>\n      <th>freebase_movie_id</th>\n      <th>name</th>\n      <th>release_date</th>\n      <th>revenue</th>\n      <th>runtime</th>\n      <th>languages</th>\n      <th>countries</th>\n      <th>genres</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>3298</th>\n      <td>27329170</td>\n      <td>/m/0by00vv</td>\n      <td>Tōki Rakujitsu</td>\n      <td>1992-07-04</td>\n      <td>NaN</td>\n      <td>119.0</td>\n      <td>{}</td>\n      <td>{\"/m/03_3d\": \"Japan\"}</td>\n      <td>{\"/m/0gw5n2f\": \"Japanese Movies\"}</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "       wikipedia_id freebase_movie_id             name release_date  revenue  \\\n41788       3320322         /m/095mql  Sixth Happiness         1997      NaN   \n\n       runtime languages                       countries  \\\n41788     97.0        {}  {\"/m/07ssc\": \"United Kingdom\"}   \n\n                                                  genres  \n41788  {\"/m/07s9rl0\": \"Drama\", \"/m/01f9r0\": \"Docudram...  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>wikipedia_id</th>\n      <th>freebase_movie_id</th>\n      <th>name</th>\n      <th>release_date</th>\n      <th>revenue</th>\n      <th>runtime</th>\n      <th>languages</th>\n      <th>countries</th>\n      <th>genres</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>41788</th>\n      <td>3320322</td>\n      <td>/m/095mql</td>\n      <td>Sixth Happiness</td>\n      <td>1997</td>\n      <td>NaN</td>\n      <td>97.0</td>\n      <td>{}</td>\n      <td>{\"/m/07ssc\": \"United Kingdom\"}</td>\n      <td>{\"/m/07s9rl0\": \"Drama\", \"/m/01f9r0\": \"Docudram...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 43,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,15 +150,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-09T17:13:54.464930043Z",
-     "start_time": "2023-11-09T17:13:54.449104006Z"
+     "end_time": "2023-11-09T17:17:25.794667227Z",
+     "start_time": "2023-11-09T17:17:25.738818155Z"
     }
    },
    "id": "f4d43a49882d8a85"
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 54,
    "outputs": [
     {
      "name": "stdout",
@@ -171,10 +170,10 @@
     },
     {
      "data": {
-      "text/plain": "       wikipedia_id freebase_movie_id release_date character_name birthday  \\\n53384      20935471        /m/05b2d7t   1988-10-27        Natalie      NaN   \n\n      gender  height ethnicity             name  age_at_release freebase_map  \\\n53384      F     NaN       NaN  Saskia Schlicht             NaN   /m/0n50p17   \n\n      freebase_char_id freebase_actor_id  \n53384       /m/0n537wh        /m/0n50p1b  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>wikipedia_id</th>\n      <th>freebase_movie_id</th>\n      <th>release_date</th>\n      <th>character_name</th>\n      <th>birthday</th>\n      <th>gender</th>\n      <th>height</th>\n      <th>ethnicity</th>\n      <th>name</th>\n      <th>age_at_release</th>\n      <th>freebase_map</th>\n      <th>freebase_char_id</th>\n      <th>freebase_actor_id</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>53384</th>\n      <td>20935471</td>\n      <td>/m/05b2d7t</td>\n      <td>1988-10-27</td>\n      <td>Natalie</td>\n      <td>NaN</td>\n      <td>F</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Saskia Schlicht</td>\n      <td>NaN</td>\n      <td>/m/0n50p17</td>\n      <td>/m/0n537wh</td>\n      <td>/m/0n50p1b</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "        wikipedia_id freebase_movie_id release_date character_name  \\\n217138      35861350        /m/0jwschy   1927-10-21            NaN   \n\n          birthday gender  height ethnicity             name  age_at_release  \\\n217138  1892-01-19      F    1.65       NaN  Mady Christians             NaN   \n\n       freebase_map freebase_char_id freebase_actor_id  \n217138   /m/0mzndcj              NaN         /m/039m2r  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>wikipedia_id</th>\n      <th>freebase_movie_id</th>\n      <th>release_date</th>\n      <th>character_name</th>\n      <th>birthday</th>\n      <th>gender</th>\n      <th>height</th>\n      <th>ethnicity</th>\n      <th>name</th>\n      <th>age_at_release</th>\n      <th>freebase_map</th>\n      <th>freebase_char_id</th>\n      <th>freebase_actor_id</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>217138</th>\n      <td>35861350</td>\n      <td>/m/0jwschy</td>\n      <td>1927-10-21</td>\n      <td>NaN</td>\n      <td>1892-01-19</td>\n      <td>F</td>\n      <td>1.65</td>\n      <td>NaN</td>\n      <td>Mady Christians</td>\n      <td>NaN</td>\n      <td>/m/0mzndcj</td>\n      <td>NaN</td>\n      <td>/m/039m2r</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 44,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,8 +187,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-09T17:13:54.955102670Z",
-     "start_time": "2023-11-09T17:13:54.909244376Z"
+     "end_time": "2023-11-09T17:17:25.821027217Z",
+     "start_time": "2023-11-09T17:17:25.781904102Z"
     }
    },
    "id": "39ae5c73f7a1d7c7"
