--- a/milestone_2.ipynb
+++ b/milestone_2.ipynb
@@ -6866,7 +6866,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the graphs we can see that money-related movies tend to increase over the years. We can also see a spike in the number of money-related movies around 2008, which is the year of the Global Financial Crisis. This is expected since the crisis was a major event that affected the whole world and it is natural that it would be reflected in the movie industry as well."
+    "From the graphs we can see that money-related movies tend to increase over the years. We can also see a spike in the number of money-related movies around 2008, which is the year of the Global Financial Crisis. This is expected since the crisis was a major event that affected the whole world and it is natural that it would be reflected in the movie industry as well. However notice that there is a lag from 1-2 years for the production of money-related movies to spike. This might be due to the fact that movies take 1-2 years from production to deployment. See [link](https://www.backstage.com/magazine/article/how-long-does-it-take-to-film-a-movie-76171/)"
    ]
   },
   {
