cold war maybe?

--- a/milestone_2.ipynb
+++ b/milestone_2.ipynb
@@ -7421,6 +7421,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### COLD WAR?!?\n",
+    "\n",
+    "Berlin Wall fell in 1994."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ussr_countries = [\"RUS\", \"UKR\", \"BLR\", \"MDA\", \"EST\", \"LVA\", \"LTU\", \"GEO\", \"ARM\", \"AZE\", \"KAZ\", \"UZB\", \"TKM\", \"KGZ\", \"TJK\"]\n",
+    "eastern_bloc_countries = [\"POL\", \"DEU\", \"CZE\", \"SVK\", \"HUN\", \"ROU\", \"BGR\", \"ALB\"]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Are there regional differences?"
    ]
   },
@@ -9303,7 +9322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.11.6"
   },
   "toc": {
    "base_numbering": 1,
