Small fix in ratings

--- a/milestone_2.ipynb
+++ b/milestone_2.ipynb
@@ -2945,7 +2945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 115,
    "outputs": [
     {
      "data": {
@@ -2957,8 +2957,8 @@
     },
     {
      "data": {
-      "text/plain": "    year title_best                     title_worst  imdb_rating_best  \\\n30  1990     Anjali                      Fire Birds               8.2   \n45  2005   Serenity                      BloodRayne               7.8   \n51  2011    Warrior  Justin Bieber: Never Say Never               8.1   \n\n    imdb_rating_worst  profit_gap  \n30                4.7    0.000000  \n45                3.0    0.006114  \n51                1.7    0.022739  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>year</th>\n      <th>title_best</th>\n      <th>title_worst</th>\n      <th>imdb_rating_best</th>\n      <th>imdb_rating_worst</th>\n      <th>profit_gap</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>30</th>\n      <td>1990</td>\n      <td>Anjali</td>\n      <td>Fire Birds</td>\n      <td>8.2</td>\n      <td>4.7</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>45</th>\n      <td>2005</td>\n      <td>Serenity</td>\n      <td>BloodRayne</td>\n      <td>7.8</td>\n      <td>3.0</td>\n      <td>0.006114</td>\n    </tr>\n    <tr>\n      <th>51</th>\n      <td>2011</td>\n      <td>Warrior</td>\n      <td>Justin Bieber: Never Say Never</td>\n      <td>8.1</td>\n      <td>1.7</td>\n      <td>0.022739</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "    year                title_best                     title_worst  \\\n45  2005                  Serenity                      BloodRayne   \n51  2011                   Warrior  Justin Bieber: Never Say Never   \n34  1994  The Shawshank Redemption                  Street Fighter   \n\n    imdb_rating_best  imdb_rating_worst  profit_gap  \n45               7.8                3.0    0.006114  \n51               8.1                1.7    0.022739  \n34               9.3                4.0    0.051867  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>year</th>\n      <th>title_best</th>\n      <th>title_worst</th>\n      <th>imdb_rating_best</th>\n      <th>imdb_rating_worst</th>\n      <th>profit_gap</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>45</th>\n      <td>2005</td>\n      <td>Serenity</td>\n      <td>BloodRayne</td>\n      <td>7.8</td>\n      <td>3.0</td>\n      <td>0.006114</td>\n    </tr>\n    <tr>\n      <th>51</th>\n      <td>2011</td>\n      <td>Warrior</td>\n      <td>Justin Bieber: Never Say Never</td>\n      <td>8.1</td>\n      <td>1.7</td>\n      <td>0.022739</td>\n    </tr>\n    <tr>\n      <th>34</th>\n      <td>1994</td>\n      <td>The Shawshank Redemption</td>\n      <td>Street Fighter</td>\n      <td>9.3</td>\n      <td>4.0</td>\n      <td>0.051867</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -2967,7 +2967,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean profit gap:  48.69\n"
+      "Mean profit gap:  49.66\n"
      ]
     }
    ],
@@ -2990,6 +2990,7 @@
     ")\n",
     "# filter out movies that are best and worst simultaneously (lack of movies in dataset)\n",
     "best_worst_rated_movies = best_worst_rated_movies[best_worst_rated_movies[\"profit_gap\"] != 1]\n",
+    "best_worst_rated_movies = best_worst_rated_movies[best_worst_rated_movies[\"profit_gap\"] != 0]\n",
     "\n",
     "display(\n",
     "    best_worst_rated_movies[\n",
@@ -3007,15 +3008,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-20T10:10:39.055998473Z",
-     "start_time": "2023-12-20T10:10:38.840717189Z"
+     "end_time": "2023-12-20T10:18:25.685401193Z",
+     "start_time": "2023-12-20T10:18:25.443820686Z"
     }
    }
   },
   {
    "cell_type": "markdown",
    "source": [
-    "We can see that the mean profit gap between best and worst rated movies is around 48. This means that the best rated movie generated 44 times the profit of the worst rated one. To show some concrete examples, in 1973 \"The Sting\" generated 1174 times the profit of \"The Crazies\". It is also interesting to notice that sometimes the worst rated movies can generate higher profits than the best rated ones. We believe this might be due to some other external influences (such as the popularity of the actors). For example, in 2011, \"Warrior\" made 0.02 the profit of \"Justin Bieber: Never Say Never\" despite having 6.7 points more in rating. Since Justin Bieber has a huge fanbase from his singing career, those same fans also went to watch his movie and generated revenue, despite the movie being rated with a very low rating."
+    "We can see that the mean profit gap between best and worst rated movies is around 49. This means that the best rated movie generated 44 times the profit of the worst rated one. To show some concrete examples, in 1973 \"The Sting\" generated 1174 times the profit of \"The Crazies\". It is also interesting to notice that sometimes the worst rated movies can generate higher profits than the best rated ones. We believe this might be due to some other external influences (such as the popularity of the actors). For example, in 2011, \"Warrior\" made 0.02 the profit of \"Justin Bieber: Never Say Never\" despite having 6.7 points more in rating. Since Justin Bieber has a huge fanbase from his singing career, those same fans also went to watch his movie and generated revenue, despite the movie being rated with a very low rating."
    ],
    "metadata": {
     "collapsed": false
