update markdown for Q2

--- a/milestone_3.ipynb
+++ b/milestone_3.ipynb
@@ -3767,9 +3767,9 @@
    "source": [
     "### What is the relationship between global economic indicators (like GDP) and a movie's gross revenue? \n",
     "\n",
-    "Gross Domestic Product (GDP) is the total cash value of everything produced within the nation - a true heartbeat of the country's economy. It's a great economic growth indicator because it tells us how healthy the economy is. When it comes to movies making bucks, GDP is a big deal. A high GDP means people have more money to spend on tickets and popcorn. This way we can see the impact that economic growth has on movie revenue, by comparing how well the two move together.\n",
+    "We are going to prepare the gdp dataset, so that we can easily access specific country data, loc by years and extract only the gdp numeric data.\n",
     "\n",
-    "We kick off, with a simple graph with relative yearly values of the world's GDP and mean movie revenue, spanning from 1960 to 2012. Our eyes are the primary sense that allows us to delve into the cinematic experience - and they can also help us quickly assess the relation between the two."
+    "Then we will get the worlds GDP to get a basic understanding of the relation between the GDP and movie revenue. It will help in assesing the value of correlation between GDP and movie revenue for specific countries down the line. We will calculate both Pearson and Sperman, so that we get an idea about linearity and strength + direction of monotonic association."
    ]
   },
   {
@@ -3783,17 +3783,21 @@
    },
    "outputs": [],
    "source": [
+    "# adding the country column to the movies dataset, by extracting it from the countries column\n",
     "movies[\"country\"] = movies[\"countries\"].apply(lambda x: x.split(\":\")[-1].strip(\"}\").replace('\"', '').strip())\n",
     "movies[\"country\"].replace(\"{\", \"Unknown\", inplace=True)\n",
     "\n",
+    "# preparing a clean gdp_data df, containing only numeric data\n",
     "gdp_data_preprocessed = gdp_data.copy()\n",
     "gdp_data_preprocessed[\"Country Name\"].replace(\"United States\", \"United States of America\", inplace=True)\n",
     "gdp_data_preprocessed = gdp_data_preprocessed.set_index(\"Country Name\").loc[:, gdp_data.columns[4:-1]]\n",
     "gdp_data_preprocessed_transposed = gdp_data_preprocessed.T\n",
     "gdp_data_preprocessed_transposed.index = gdp_data_preprocessed_transposed.index.astype(int)\n",
     "\n",
+    "# calculating the mean movie revenue for each year\n",
     "mean_movie_revenue_by_year = movies.groupby(\"year\")[\"revenue\"].mean()\n",
     "\n",
+    "# calculating pearson and spearman correlations between the mean movie revenue and the worlds gdp\n",
     "world_gdp = gdp_data_preprocessed_transposed[\"World\"].loc[:2012]\n",
     "\n",
     "relative_world_gdp = world_gdp / world_gdp.iloc[0]\n",
@@ -3835,7 +3839,6 @@
     ")\n",
     "\n",
     "fig.update_layout(\n",
-    "    # title_text=f\"World GDP vs Mean Movie Revenue, relative<br>Spearman: {spearman[0]:.3f}, p-value: {spearman[1]:.3f}<br>Pearson: {pearson[0]:.3f}, p-value: {pearson[1]:.3f}\",\n",
     "    title_text = f\"\"\"\n",
     "    World GDP vs Mean Movie Revenue, relative<br>\n",
     "    Spearman: {spearman_world_gdp_mean_movie_revenue[0]:>7.3f}  p-value: {spearman_world_gdp_mean_movie_revenue[1]:>6.3f}<br>\n",
@@ -3862,11 +3865,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "At first glance, this may look like a catastrophic flop. Something that would make a movie studio completely abandon the idea... But wait! Look at the correlations! Both Spearman and Pearson coefficients indicate a high level of correlation between the two time series and are backed, by p-values way smaller than 0.05. We can confidently say that even if the two are not moving tightly together, they still show similar behavior and like to either grow or shrink at the same time.\n",
-    "\n",
-    "Some John Doe can now wonder: \"Hmm, okay... But nothing in life is this simple. There have to be some deviations from this relation. I can't believe that some random third-world country's GDP correlates with movie revenue the same as the cradle of the movie industry that the USA is\". And it is a completely logical argument. We would expect that the correlation between GDP and movie revenue of rich countries will be bigger than countries that are still in the early development phase - they just have more money to spend on the entertainment industry.\n",
-    "\n",
-    "To try and unravel whether this common sense logic is true, we can move from the whole screen to separate pixels - zoom in to how the GDP of each of the countries correlates with movie revenue. "
+    "We obtained the Spearman correlation of 0.728 which means that there is high monotonic association between variables. We also got high Pearson correlation -- 0.778. Both p-values are smaller than 0.05 so we treat those results as statistically significant."
    ]
   },
   {
@@ -3874,6 +3873,15 @@
    "metadata": {},
    "source": [
     "### Are there any regional differences?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have the notion of what the relation between GDP and movie revenue is in general, we will take a look at the correlations between specific countries and mean movie revenue. By having this \"world\" baseline, we can assess whether there are countries diverging. For these calculations to work, we need to drop missing values and match the indexes, as scipy expects to receive non-nan data, otherwise it would return nan as correlation coefficient value. \n",
+    "\n",
+    "Also, as we mainly want to use this data to create a chloropleth map, we will check the p-value for each country and if it is higher than 0.05, we will assing the nan value as the correlation coefficient. We could just leave it as it is, because p-values would show while hovering over the country. But we expect most data story readers to just glance over and don't want them to be deceived by non-significant correlation values. Nan valued countries will be grayed on the map."
    ]
   },
   {
@@ -4067,18 +4075,23 @@
     }
    ],
    "source": [
+    "# prepare a template df, ready to be filled with correlation data\n",
     "gdp_revenue_correlation = pd.DataFrame(columns=[\"pearson\", \"spearman\", \"pearson_p\", \"spearman_p\"], index=gdp_data_preprocessed.index)\n",
     "\n",
     "for country in gdp_data_preprocessed.index:\n",
+    "    # match indexes, drop nans\n",
     "    gdp_isna = gdp_data_preprocessed_transposed.loc[1960:2012, country].isna()\n",
     "    mean_movie_revenue_by_year_isna = mean_movie_revenue_by_year.isna()\n",
     "    temp_gdp = gdp_data_preprocessed_transposed.loc[1960:2012, country][~gdp_isna.values & ~mean_movie_revenue_by_year_isna.values]\n",
     "    temp_mean_revenue = mean_movie_revenue_by_year[~gdp_isna.values & ~mean_movie_revenue_by_year_isna.values]\n",
     "\n",
+    "    # skip countries with insufficient data\n",
     "    if len(temp_gdp) < 2:\n",
     "        gdp_revenue_correlation.loc[country] = [np.nan, np.nan, np.nan, np.nan]\n",
     "        print(f\"Skipping {country} due to insufficient data\")\n",
     "        continue\n",
+    "\n",
+    "    # calculate correlations\n",
     "    spearman = stats.spearmanr(temp_gdp, temp_mean_revenue)\n",
     "    pearson = stats.pearsonr(temp_gdp, temp_mean_revenue)\n",
     "    if spearman[1] > 0.05 and pearson[1] > 0.05:\n",
@@ -4090,6 +4103,7 @@
     "    else:\n",
     "        gdp_revenue_correlation.loc[country] = [pearson[0], spearman[0], pearson[1], spearman[1]]\n",
     "\n",
+    "# convert to float, merge with gdp_data to get country codes\n",
     "gdp_revenue_correlation = gdp_revenue_correlation.astype(float)\n",
     "gdp_revenue_correlation = pd.merge(gdp_revenue_correlation, gdp_data[[\"Country Name\", \"Country Code\"]], left_index=True, right_on=\"Country Name\", how=\"left\").set_index(\"Country Name\")\n",
     "gdp_revenue_correlation.loc[\"United States of America\", \"Country Code\"] = \"USA\"\n",
@@ -4191,7 +4205,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that is a very interesting picture. We see that there certainly are divergences from how the worlds GDP correlates with movie revenue. Whats even more interesting - correlation is still quite high for developing countries in Africa, but the whole post-soviet region glows green. Is this a cold war stigma? Between 1960 and 1989, when the Iron Curtain was still casting shadow, most of the western movies were either completely unavaible in this part of the world or their screenings were delayed significantly (*Star Wars* made it to Hungarian cinemas almost two years after it's official release). Let's take a closer look."
+    "Now there certainly seems to be some divergence between correlation coefficients values for each country. Visually, most of the countries are close to the \"world GDP\" correlations level that we calculated as a baseline. But Eastern Europe, part of Euroasia and Middle East are diverging, with coefficients near 0.5 levels. Through a mixture of historic and economic domain knowledge, we can hypothesize that this may be a result of these countries being on the Russian part of Iron Curtain, and going through related with it economic distress. \n",
+    "\n",
+    "To confirm/reject the hypothesis, we will look at the distribution of correlations for USSR related/aligned countries (that were either under USSR rule or allied economically/militarily) and the rest of the world. If these distributions are different, then we can say that being on the other side of Iron Curtain could potentially be the reason these countries GDP correlates weaker with movie revenue.\n",
+    "\n",
+    "We will check the divergence using Kolmogorov-Smirnov test, as the distribution of these correlations is not normal, hence we need to use a test that does not assume normality."
    ]
   },
   {
@@ -4205,6 +4223,7 @@
    },
    "outputs": [],
    "source": [
+    "# function to match indexes and drop nans\n",
     "def same_index_no_nans(x1, x2):\n",
     "    shared_idx = x1.index.intersection(x2.index)\n",
     "    x1 = x1[shared_idx]\n",
@@ -4396,8 +4415,7 @@
     }
    ],
    "source": [
-    "ussr_countries = [\"RUS\", \"UKR\", \"BLR\", \"MDA\", \"EST\", \"LVA\", \"LTU\", \"GEO\", \"ARM\", \"AZE\", \"KAZ\", \"UZB\", \"TKM\", \"KGZ\", \"TJK\"]\n",
-    "eastern_bloc_countries = [\"POL\", \"DEU\", \"CZE\", \"SVK\", \"HUN\", \"ROU\", \"BGR\", \"ALB\"]\n",
+    "# codes for all countries that were part of the USSR, its satellite states and countries that were part of the Warsaw Pact\n",
     "all_ussr_related = [\n",
     "    \"ARM\", \"AZE\", \"BLR\", \"EST\", \"GEO\", \"KAZ\", \"KGZ\", \"LVA\", \"LTU\", \"MDA\", \n",
     "    \"RUS\", \"TJK\", \"TKM\", \"UKR\", \"UZB\", \"AFG\", \"ALB\", \"AGO\", \"BEN\", \"BGR\", \n",
@@ -4406,6 +4424,7 @@
     "    \"VNM\", \"BIH\", \"HRV\", \"MKD\", \"MNE\", \"SRB\", \"SVN\", \"XKX\"\n",
     "]\n",
     "\n",
+    "# get the gdp data for all ussr related countries\n",
     "gdp_data_ussr_related = gdp_data[gdp_data[\"Country Code\"].isin(all_ussr_related)].set_index(\"Country Name\").loc[:, gdp_data.columns[4:-1]].T\n",
     "gdp_data_ussr_related.index = gdp_data_ussr_related.index.astype(int)\n",
     "\n",
@@ -4431,12 +4450,15 @@
     }
    ],
    "source": [
+    "# get the gdp data for all ussr related countries\n",
     "gdp_revenue_correlation_ussr_related = gdp_revenue_correlation.set_index(\"Country Code\").loc[all_ussr_related, :].reset_index()\n",
     "gdp_revenue_correlation_no_ussr = gdp_revenue_correlation[~gdp_revenue_correlation[\"Country Code\"].isin(all_ussr_related)]\n",
     "\n",
+    "# calculate the pearson correlation between the yearly gdp and mean movie revenue for ussr related countries and the rest of the world\n",
     "pearson_ussr = gdp_revenue_correlation_ussr_related[\"pearson\"]\n",
     "pearson_no_ussr = gdp_revenue_correlation_no_ussr[\"pearson\"]\n",
     "\n",
+    "# perform a Kolmogorov-Smirnov test to see if the distributions are the same\n",
     "ks_statistic, p_value = ks_2samp(pearson_ussr, pearson_no_ussr)\n",
     "\n",
     "hist_ussr = go.Histogram(\n",
@@ -4476,7 +4498,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After separating the correlations of the USSR, its satellite and aligned countries, and the rest of the world, we can see that the distributions are different. We also confirmed it, by the p-value of (oh, the irony) Kolmogorov-Smirnov test smaller than 0.05. It really looks like there are regional differences in how the GDP and movie revenue are related, and we have strong reasons to believe that it is a consequence of the soviet rule - thankfully, one of the most harmless ones."
+    "The p-value of Kolmogorov-Smirnov test is smaller than 0.05 so we can say that the distributions of correlations for countries related to USSR and rest of the world are different and that difference is statistically significant. "
    ]
   },
   {
